--- a/sorry_babe.html
+++ b/sorry_babe.html
@@ -10,7 +10,7 @@
 body,h1 {font-family: "Raleway", sans-serif}
 body, html {height: 100%}
 .bgimg {
-  background-image: url('sad.png');
+  background-image: url('images/babyy.png');
   min-height: 100%;
   background-position: center;
   background-size: cover;
