--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ body, html {height: 100%}
   <div class="w3-display-middle">
     <h1 class="w3-jumbo w3-animate-top">are u still annoyed</h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
-    <p class="w3-large w3-center"> <a href="https://dvillar8.github.io/hiii/images/Yes.html">Yes</a> <br>
+    <p class="w3-large w3-center"> <a href="https://dvillar8.github.io/hiii/images/Yes.html" target="_blank">Yes</a> <br>
         <a href="https://www.google.com">No</a></p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
