--- a/images/Yes.html
+++ b/images/Yes.html
@@ -42,7 +42,7 @@ body {font-family: "Raleway", Arial, sans-serif}
 <footer class="w3-light-grey w3-padding-64 w3-center" id="about">
   <h2>Ways you can stop</h2>
   <h4> 1. just shut up and love me</h4>
-  <p>dont know how? <a href="https://www.youtube.com/watch?v=y8Gf4-eT3w0">this</a> might help</p>
+  <p>dont know how? <a href="https://www.youtube.com/watch?v=y8Gf4-eT3w0" target="_blank">this</a> might help</p>
   <h4>2. take a deep breath and remember how cute i am</h4>
   <p>in case you need a <a href="https://dvillar8.github.io/hiii/images/baby_me.html" target="_blank">reminder</a></p>
   
