--- a/images/baby_me.html
+++ b/images/baby_me.html
@@ -16,8 +16,8 @@ body {font-family: "Raleway", Arial, sans-serif}
 
   <!-- Header -->
   <header class="w3-container w3-xlarge w3-padding-24">
-    <a href="#" class="w3-left w3-button w3-white">then can you stop!!!!</a>
-    <a href="#about" class="w3-right w3-button w3-white">please!!!</a>
+    <a href="#" class="w3-left w3-button w3-white">look at me!!!</a>
+    <a href="#about" class="w3-right w3-button w3-white">babe actually look i was so cute</a>
   </header>
 
   <!-- Photo Grid -->
