--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body, html {height: 100%}
 
 <div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
   <div class="w3-display-topleft w3-padding-large w3-xlarge">
-    gatos
+   
   </div>
   <div class="w3-display-middle">
     <h1 class="w3-jumbo w3-animate-top">are u still annoyed</h1>
@@ -30,7 +30,7 @@ body, html {height: 100%}
         <a href="https://www.google.com">No</a></p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
-    hiiii <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">hello</a>
+<a href="https://www.w3schools.com/w3css/default.asp" target="_blank"></a>
     <br>
     <br>
      <br>
