--- a/images/no.html
+++ b/images/no.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>wepa!!</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -27,7 +27,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 <div class="w3-col l8 s12">
   <!-- Blog entry -->
   <div class="w3-card-4 w3-margin w3-white">
-    <img src="cute_us.png" alt="Nature" style="width:100%">
+    <img src="we_cute.png" alt="we cute" style="width:100%">
     <div class="w3-container">
       <h3><b>look how cute we are</b></h3>
       
@@ -45,7 +45,7 @@ and is wrapped around the whole page content, except for the footer in this exam
 
   <!-- Blog entry -->
   <div class="w3-card-4 w3-margin w3-white">
-  <img src="/w3images/bridge.jpg" alt="Norway" style="width:100%">
+  <img src="we_so_cute.png" alt="extra cute" style="width:100%">
     <div class="w3-container">
       <h3><b>how can u be mad at this</b></h3>
       
@@ -59,12 +59,12 @@ and is wrapped around the whole page content, except for the footer in this exam
       </div>
     </div>
   </div>
-<!-- END BLOG ENTRIES -->
+<!-- bobop beep -->
 </div>
 
-<!-- Introduction menu -->
+<!-- Intro stuff blabla -->
 <div class="w3-col l4">
-  <!-- About Card -->
+  <!-- About section!! -->
   <div class="w3-card w3-margin w3-margin-top">
   <img src="our_baby.png" style="width:100%">
     <div class="w3-container w3-white">
@@ -73,7 +73,7 @@ and is wrapped around the whole page content, except for the footer in this exam
     </div>
   </div><hr>
   
-  <!-- Posts -->
+  <!-- extra funnies -->
   <div class="w3-card w3-margin">
     <div class="w3-container w3-padding">
       <h4>some funnies</h4>
