--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ body, html {height: 100%}
     <h1 class="w3-jumbo w3-animate-top">are u still annoyed</h1>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
     <p class="w3-large w3-center"> <a href="https://dvillar8.github.io/hiii/images/Yes.html" target="_blank">Yes</a> <br>
-        <a href="https://dvillar8.github.io/hiii/images/No.html" target="_blank">No</a></p>
+        <a href="https://dvillar8.github.io/hiii/images/no.html" target="_blank">No</a></p>
   </div>
   <div class="w3-display-bottomleft w3-padding-large">
 <a href="https://www.w3schools.com/w3css/default.asp" target="_blank"></a>
