--- a/images/no.html
+++ b/images/no.html
@@ -75,11 +75,11 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   <!-- extra funnies -->
   <div class="w3-card w3-margin">
     <div class="w3-container w3-padding">
-      <h4>some funnies</h4>
+      <h4>some funnies for u: </h4>
     </div>
     <ul class="w3-ul w3-hoverable w3-white">
       <li class="w3-padding-16">
-        <span class="w3-large"> <a href="https://www.google.com" target="_blank"> click me loser </a></span><br>
+        <span class="w3-large"> <a href="https://dvillar8.github.io/hiii/images/funnies.html" target="_blank"> click me loser </a></span><br>
        
     
     </ul>
