--- a/images/Yes.html
+++ b/images/Yes.html
@@ -11,16 +11,16 @@ body {font-family: "Raleway", Arial, sans-serif}
 </style>
 <body>
 
-<!-- !PAGE CONTENT! -->
+<!-- first section right here -->
 <div class="w3-content" style="max-width:1500px">
 
-  <!-- Header -->
+  <!-- out header -->
   <header class="w3-container w3-xlarge w3-padding-24">
     <a href="#" class="w3-left w3-button w3-white">then can you stop!!!!</a>
     <a href="#about" class="w3-right w3-button w3-white">please!!!</a>
   </header>
 
-  <!-- Photo Grid -->
+  <!-- grid stuff -->
   <div class="w3-row">
     <div class="w3-half">
       <img src="dante.png" style="width:100%">
@@ -35,10 +35,10 @@ body {font-family: "Raleway", Arial, sans-serif}
     </div>
   </div>
   
-<!-- End Page Content -->
+<!-- some fun stuff -->
 </div>
 
-<!-- Footer / About Section -->
+<!-- lower section -->
 <footer class="w3-light-grey w3-padding-64 w3-center" id="about">
   <h2>Ways you can stop</h2>
   <h4> 1. just shut up and love me</h4>
